--- a/composer.json
+++ b/composer.json
@@ -20,26 +20,43 @@
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6.5",
         "drupal-composer/drupal-scaffold": "^2.5",
+        "drupal/address": "^1.7",
+        "drupal/admin_toolbar": "^1.27",
         "drupal/better_exposed_filters": "^3.0@alpha",
         "drupal/block_class": "^1.0",
+        "drupal/block_field": "^1.0@alpha",
+        "drupal/config_update": "^1.6",
         "drupal/console": "^1.0.2",
         "drupal/core": "^8.7.0",
         "drupal/crop": "^1.5",
+        "drupal/data_policy": "^1.0@beta",
         "drupal/entity_reference_revisions": "^1.6",
         "drupal/field_group": "^1.0",
+        "drupal/flag": "^4.0@alpha",
         "drupal/flippy": "^1.0@beta",
         "drupal/fontawesome": "^2.12",
         "drupal/fontyourface": "^3.2",
         "drupal/image_widget_crop": "^2.2",
         "drupal/mailchimp": "^1.8",
+        "drupal/message": "^1.0@RC",
         "drupal/metatag": "^1.8",
         "drupal/onesignal": "1.x-dev",
+        "drupal/override_node_options": "^2.4",
         "drupal/paragraphs": "^1.8",
+        "drupal/pathauto": "^1.4",
+        "drupal/private_message": "^1.2",
+        "drupal/profile": "^1.0@RC",
+        "drupal/r4032login": "^1.1",
+        "drupal/redirect": "^1.3",
+        "drupal/search_api": "^1.13",
+        "drupal/shariff": "^1.5",
         "drupal/superfish": "^1.3",
+        "drupal/swiftmailer": "^1.0@beta",
         "drupal/token": "^1.5",
         "drupal/tvi": "^1.0@beta",
         "drupal/video_embed_field": "^2.0",
         "drupal/views_infinite_scroll": "^1.5",
+        "drupal/votingapi": "^3.0@beta",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
