--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "drupal-composer/drupal-scaffold": "^2.5",
         "drupal/address": "^1.7",
         "drupal/admin_toolbar": "^1.27",
+        "drupal/autologout": "^1.0",
         "drupal/better_exposed_filters": "^3.0@alpha",
         "drupal/block_class": "^1.0",
         "drupal/block_field": "^1.0@alpha",
@@ -34,29 +35,39 @@
         "drupal/field_group": "^1.0",
         "drupal/flag": "^4.0@alpha",
         "drupal/flippy": "^1.0@beta",
-        "drupal/fontawesome": "^2.12",
+        "drupal/fontawesome": "^2.13",
         "drupal/fontyourface": "^3.2",
+        "drupal/honeypot": "^1.29",
         "drupal/image_widget_crop": "^2.2",
-        "drupal/mailchimp": "^1.8",
+        "drupal/inline_entity_form": "^1.0@RC",
+        "drupal/login_history": "^1.0",
+        "drupal/login_security": "^1.5",
+        "drupal/mailchimp": "^1.9",
         "drupal/message": "^1.0@RC",
         "drupal/metatag": "^1.8",
         "drupal/onesignal": "1.x-dev",
         "drupal/override_node_options": "^2.4",
         "drupal/paragraphs": "^1.8",
+        "drupal/password_policy": "^3.0@alpha",
+        "drupal/password_strength": "^2.0@alpha",
         "drupal/pathauto": "^1.4",
         "drupal/private_message": "^1.2",
         "drupal/profile": "^1.0@RC",
         "drupal/r4032login": "^1.1",
         "drupal/redirect": "^1.3",
         "drupal/search_api": "^1.13",
+        "drupal/seckit": "^1.2",
+        "drupal/securelogin": "^1.7",
+        "drupal/security_review": "1.x-dev",
         "drupal/shariff": "^1.5",
         "drupal/superfish": "^1.3",
         "drupal/swiftmailer": "^1.0@beta",
         "drupal/token": "^1.5",
         "drupal/tvi": "^1.0@beta",
         "drupal/video_embed_field": "^2.0",
-        "drupal/views_infinite_scroll": "^1.5",
+        "drupal/views_infinite_scroll": "^1.6",
         "drupal/votingapi": "^3.0@beta",
+        "drupal/webform": "^5.2",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
